syntax = "proto3";

// package指定は必須. HTTP/2のヘッダの一部として使われるらしい.
package deepthought;

option go_package = "github.com/Ryotaro-Hayashi/grpc-practice;pb";

message BootRequest {}

message BootResponse {
  string message = 1;
}

message InferRequest {
  string query = 1;
}

message InferResponse {
  sint64 answer = 1;
  repeated string description = 2;
}

service Compute {
  rpc Boot(BootRequest) returns (stream BootResponse);
  rpc Infer(InferRequest) returns (InferResponse);
}
